[tool.poetry]
name = "pso-la"
version = "0.1.0"
description = ""
authors = ["jhlandman <jaysonhenrylandman@yahoo.com>"]
readme = "README.md"
packages = [{include = "pos_la"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
